src/styles.css
*, *::before, *::after {
  box-sizing: border-box;
}

* {
  margin: 0;
}

body {
  line-height: 1.5;
  -webkit-font-smoothing: antialiased;
}

img, picture, video, canvas, svg {
  display: block;
  max-width: 100%;
}

input, button, textarea, select {
  font: inherit;
}

p, h1, h2, h3, h4, h5, h6 {
  overflow-wrap: break-word;
}

p {
  text-wrap: pretty;
}
h1, h2, h3, h4, h5, h6 {
  text-wrap: balance;
}

#root, #__next {
  isolation: isolate;
}

/* Custom ScrollBar */
::-webkit-scrollbar {
  width: 10px;
}

/* Track */
::-webkit-scrollbar-track {
  background: rgb(red, green, blue, 0); 
  border-radius: 20px;
}
 
/* Handle */
::-webkit-scrollbar-thumb {
  background: #ffffff;
  border-radius: 20px;
}

/* Handle on hover */
::-webkit-scrollbar-thumb:hover {
  background: #a6a6a6; 
}


body {
    font-family: "Fredoka";
    height: clamp(474px, 100vh, 100vh);
    width: clamp(952px, 100vw, 100vw);
    display: grid;
    grid-template-rows: 1fr 6fr;
    grid-template-columns: 1fr 4fr;
    grid-template-areas: 
    "header header"
    "sideBar mainScreen";
  }


/* HEADER */
#header {
  grid-area: header;
  background-color: #7D5A50;
  z-index: 2;
  display: flex;
  align-items: center;
  justify-content: center;
  box-shadow: 0px -5px 12px rgb(0, 0, 0);
}

.menuImage {
  position: absolute;
  left: clamp(50px,50px,1vw);
  height: 60px;
  padding: 1vh 1vh;
  filter: brightness(0) saturate(100%) invert(100%) sepia(0%) saturate(7492%) hue-rotate(294deg) brightness(97%) contrast(102%);

}

.menuImage:hover {
  cursor: pointer;
  filter: brightness(0) saturate(100%) invert(97%) sepia(80%) saturate(983%) hue-rotate(297deg) brightness(102%) contrast(116%);
}

.headerTitle {
  font-size: clamp(60px, 60px, 3vw);
  color: white;
}


.headerTitle:hover {
  cursor: pointer;
  color: #FCDEC0;
}

/* SIDEBAR */
#sideBar {
  grid-area: sideBar;
  background-color: #B4846C;
  box-shadow: -5px 0px 10px rgb(0, 0, 0);
  z-index: 1;
  display: flex;
  flex-direction: column;
  padding: clamp(35px, 35px, 4vh) clamp(10px,10px,1vw) 0px clamp(10px,10px,1vw);
  gap: 0.5vh;
  color: white;
}

.sideBarChild {
  font-size: 2rem;
  padding-left: clamp(50px, 50px, 4vw);
  padding-right: clamp(50px, 50px, 4vw);
  border-radius: 5px;
}

.sideBarChild:hover {
  color: #faf3dd;
  background-color: #7D5A50;
  cursor: pointer;
}

#projectTitleContainer {
  display: flex;
  align-items: center;
  font-size: 2rem;
  padding-left: clamp(50px, 50px, 4vw);
  padding-right: clamp(10px, 10px, 2vw);
  border-radius: 5px;
}

#projectTitleContainer:hover {
  background-color: #7D5A50;
  color: #faf3dd;
}

.projectsNav:hover {
  cursor: pointer;
}

.projectAddButton {
  margin-left: auto;
  height: 20px;
  filter: brightness(0) saturate(100%) invert(100%) sepia(0%) saturate(0%) hue-rotate(49deg) brightness(103%) contrast(103%);
}

.projectAddButton:hover {
  cursor: pointer;
  filter: brightness(0) saturate(100%) invert(99%) sepia(3%) saturate(1832%) hue-rotate(323deg) brightness(90%) contrast(119%);
}

#projectNavInputContainer {
  display: flex;
  align-items: center;
  margin-left: 50px;
  padding-right: 0px
}

#projectNavInputContainer:hover {
  background-color: #B4846C;
}

.checkmark {
  height: 30px;
  margin-left: auto;
  filter: brightness(0) saturate(100%) invert(100%) sepia(0%) saturate(0%) hue-rotate(49deg) brightness(103%) contrast(103%);
}

.checkmark:hover {
  cursor: pointer;
  filter: brightness(0) saturate(100%) invert(32%) sepia(86%) saturate(2131%) hue-rotate(131deg) brightness(101%) contrast(101%);
}

#projectNavInputContainer .nameInput {
  border-radius: 50px;
  border-style: solid;
  width: 130px;
  font-size: 1.5rem;
}

.projectNavContainer:hover {
  color: white;
  background-color: #B4846C;
}

.projectNavChild {
  font-size: 1.5rem;
  padding-left: clamp(20px, 20px, 1.5vw);
  padding-right: clamp(20px, 20px, 1.5vw);
  border-radius: 5px;
}

.projectNavChild:hover {
  color: #faf3dd;
  background-color: #7D5A50;
}

/* MAIN SCREEN */
#mainScreen {
  grid-area: mainScreen;
  background-color: #FCDEC0;
  display: flex;
  flex-direction: column;
  align-items: center;
  padding: 30px 50px;
  gap: 20px;
  width: clamp(470px, 100%, 100%)
}

.listTitle {
  background-color: #7D5A50;
  display: flex;
  justify-content: center;
  font-size: 2.5rem;
  border-radius: 20px;
  padding: 10px 50px;
  color: white;
  box-shadow: 2px 2px 5px 1px rgba(0, 0, 0, 0.349);
}

.rowContainer {
  background-color: #B4846C;
  display: flex;
  align-items: center;
  font-size: 2.5rem;
  width: clamp(467px, 100%, 100%);
  border-radius: 20px;
  padding: 30px 50px;
  color: white;
  box-shadow: 2px 2px 5px 1px rgba(0, 0, 0, 0.555);
}

.checkBox {
  margin-right: 0.5vw;
}

.rowTitle {
  margin-right: auto;
}

.projectTitle {
  margin: auto;
}

.rowTitle:hover {
  cursor: pointer;
  filter: brightness(0) saturate(100%) invert(42%) sepia(11%) saturate(1152%) hue-rotate(327deg) brightness(85%) contrast(90%);
}

.rowDueDate {
  margin-left: auto;
  margin-right: 50px;
  font-size: 1rem;
  border: 4px solid rgb(255, 255, 255);
  border-radius: 15px;
  padding: 15px;
}

.iconList {
  display: flex;
  gap: 10px;
}

.rowIcon {
  filter: brightness(0) saturate(100%) invert(100%) sepia(0%) saturate(7492%) hue-rotate(294deg) brightness(97%) contrast(102%);
  height: 40px;
}

.rowIcon:hover {
  cursor: pointer;
  filter: brightness(0) saturate(100%) invert(42%) sepia(11%) saturate(1152%) hue-rotate(327deg) brightness(85%) contrast(90%);
}

.trashIcon:hover {
  filter: brightness(0) saturate(100%) invert(8%) sepia(98%) saturate(7396%) hue-rotate(28deg) brightness(95%) contrast(128%);
}

.addTaskButton {
  position: absolute;
  top: 81vh;
  left: 6.5vw;
  display: flex;
  height: 90px;
  z-index: 3;
  filter: brightness(0) saturate(100%) invert(93%) sepia(7%) saturate(0%) hue-rotate(133deg) brightness(106%) contrast(107%);
}

.addTaskButton:hover {
  cursor: pointer;
  filter: brightness(0) saturate(100%) invert(96%) sepia(65%) saturate(669%) hue-rotate(303deg) brightness(101%) contrast(98%);
}

/* WINDOW STUFF */

.window {
  position: absolute;
  background-color: #B4846C;
  color: white;
  font-size: 3rem;
  width: 70vw;
  height: 80vh;
  margin: auto;
  left: 0;
  right: 0;
  top: 0;
  bottom: 0;
  border: 7px solid #7D5A50;
  border-radius: 50px;
  padding: 30px 60px;
  z-index: 5;
  display: grid;
  grid-template-rows: 1fr 20fr;
  grid-template-areas: 
  "exitButton"
  "textContent";
  overflow: hidden;
  box-shadow: 2px 2px 5px 1px rgba(0, 0, 0, 0.555);
}

.exitButton {
  grid-area: exitButton;
  height: 30px;
  margin-left: auto;
  filter: brightness(0) saturate(100%) invert(100%) sepia(0%) saturate(0%) hue-rotate(259deg) brightness(106%) contrast(106%);
}

.exitButton:hover {
  cursor: pointer;
  filter: brightness(0) saturate(100%) invert(96%) sepia(65%) saturate(669%) hue-rotate(303deg) brightness(101%) contrast(98%);
}

.window .titleText {
  text-align: center;
  font-size: 4rem;
}

/* See Details Window */

.detailsTextContainer .descText {
  margin-top: 5vh;
}

.detailsTextContainer .completedStatusText {
  margin-bottom: 3vh;
}

dialog::backdrop {
  backdrop-filter: blur(1px);
}

dialog:focus {
  outline: none;
}

/* Add Task Window */
.addTaskFormContainer {
  display: flex;
  flex-direction: column;
  font-size: 2rem;
  gap: 10px;
  overflow: auto;
}

.input {
  height: 5vh;
  width: 20vw;
  font-size: 1.7rem;
  border-radius: 30px;
  border-style: solid;
  padding: 10px;
}

.inputRowContainer {
  display: flex;
  align-items: center;
  gap: 20px;
}

.textArea {
  font-size: 1.7rem;
  border-radius: 30px;
  border-style: solid;
  padding: 10px;
}

.inputPriority {
  display: flex;
}

.inputPriorityLabel {
  margin-right: 20px;
}

.list {
  font-size: 1.7rem;
  border-radius: 30px;
  border-style: solid;
  text-align: center;
  background-color: white;
  border-style: solid;
}

.list:active {
  outline:none;
}

.inputCategory {
  display: flex;
}

.inputCategoryLabel {
  margin-right: 20px;
}

.categoryList {
  width: 10vw;
}

.buttonContainer {
  justify-content: center;
  font-size: 2.5rem;
  display: flex;
  gap: 80px;
  margin-top: auto;
  margin-bottom: 30px;
}

.button {
  padding: 10px 30px;
  border-radius: 50px;
  text-align: center;
  display: flex;
  align-items: center;
  justify-content: center;
  cursor: pointer;
}

.addButton {
  background-color: rgb(1, 170, 1);
}

.addButton:hover {
  background-color: rgb(82, 233, 82);
}

.cancelButton {
  background-color: rgb(170, 1, 1);
}

.cancelButton:hover {
  background-color: rgb(242, 80, 80);
}

